changed colors nav bar btns

--- a/job_application_tracker-frontend/index.html
+++ b/job_application_tracker-frontend/index.html
@@ -55,13 +55,13 @@
             <hr>
           </li>
           <li class="nav-item active">
-            <a style="background-color: green"id="createNewApplication" class="nav-link btn-primary" onclick="showNewApplicationModal()">
+            <a style="background-color: #47a447"id="createNewApplication" class="nav-link btn-primary" onclick="showNewApplicationModal()">
               <i class="material-icons">description</i>
               <p>Create new Application</p>
             </a>
           </li>
           <li class="nav-item active">
-              <a style="background-color: red; color: white" id="createNewApplication" class="nav-link btn-primary" onclick="showFindJobsModal()">
+              <a style="background-color: #d9534f; color: white" id="createNewApplication" class="nav-link btn-primary" onclick="showFindJobsModal()">
                 <i class="material-icons" style="color: white">work_outline</i>
                 <p>Find New Jobs</p>
               </a>
